Implemented finding the shortest tree path. Working on finding path to take next.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 project(JQR)
 add_definitions("-g")
-add_library(graph_lib src/graph.c)
+add_library(pqueue_lib ./src/pqueue.c)
+add_library(graph_lib ./src/graph.c ./src/pqueue.c)
 add_executable(graph_driver src/driver.c)
-target_link_libraries(graph_driver graph_lib)
+target_link_libraries(graph_driver pqueue_lib graph_lib)
